# HTTPServer

./: .gitignore  README.md  cmakelists.txt  compile.sh  main.c  makefile
data/: home.html
inc/: header.h  methods.h  queue.h  request.h  response.h  task.h  worker.h
pico-board/: cmakelists.txt  main.c
pico-board/inc/: core0.h  generated_fs.h  header.h  http_server.h  lwipopts.h  queue.h  request.h  response.h  types.h
pico-board/src/: core0.c  core1.c  generated_fs.c  http_server.c  queue.c  request.c  response.c
pico_variant/: CMakeLists.txt  generate_fsdata.py  main.c
pico_variant/inc/: core1.h  generated_fs.h  lwipopts.h  queue.h  request.h  response.h  types.h
pico_variant/inc/arch/: cc.h
pico_variant/public/: home.html
pico_variant/src/: core0.c  core1.c  generated_fs.c  queue.c  request.c  response.c
public/: home.html
src/: queue.c  request.c  response.c  worker.c
tests/: README.md  __main__.py  config.json  pyproject.toml
tests/output/: basic.txt
tests/scripts/: basic.txt
