[tool.poetry]
name = "tests"
version = "0.1.0"
description = "Basic test suite for an HTTP server."
authors = ["StickOnAStick <StickOnAStick>"]
license = "Lol"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.1"
loguru = "^0.7.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
